# SkillSyncer

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  skillsyncer-impl-spec.md  skillsyncer-spec.md  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml
operator/: SKILL.md
skills/: INDEX.md
skills/skillsyncer-fill/: SKILL.md  manifest.yaml
skills/skillsyncer-guard-assist/: SKILL.md  manifest.yaml
skills/skillsyncer-improve/: SKILL.md  manifest.yaml
skills/skillsyncer-investigate/: SKILL.md  manifest.yaml
skills/skillsyncer-onboard/: SKILL.md  manifest.yaml
skills/skillsyncer-report/: SKILL.md  manifest.yaml
skills/skillsyncer-share/: SKILL.md  manifest.yaml
skills/skillsyncer-status/: SKILL.md  manifest.yaml
skillsyncer/: __init__.py  _io.py  cli.py  config.py  discoverer.py  filler.py  git.py  guarder.py  hooks.py  identity.py  paths.py  patterns.py  renderer.py  reporter.py  scanner.py  state.py
skillsyncer/templates/: preamble.md
templates/: post-merge.sh  pre-push.sh  preamble.md
tests/: test_cli.py  test_config.py  test_discoverer.py  test_filler.py  test_git.py  test_guarder.py  test_hooks.py  test_identity.py  test_io.py  test_paths.py  test_patterns.py  test_renderer.py  test_reporter.py  test_scanner.py  test_skills_layout.py  test_state.py
tests/e2e/: conftest.py  test_e2e_workflows.py
tests/fixtures/: sample_identity.yaml
tests/fixtures/sample_skill/: SKILL.md  manifest.yaml
tests/fixtures/sample_skill_with_assets/: SKILL.md
